resource/kompose-dev/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-dev.yml convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
    io.kompose.service: analysis
  strategy: {}
  template:
    metadata:
    annotations:
        kompose.cmd: kompose -f docker-compose-dev.yml convert --volumes hostPath
        kompose.version: 1.21.0 ()
    creationTimestamp: null
    labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: analysis
    spec:
    containers:
    - env:
        - name: HOBBIT_RABBIT_HOST
        value: rabbit
        image: hobbitproject/hobbit-analysis-component:dev
        imagePullPolicy: ""
        name: analysis
        resources: {}
    restartPolicy: Always
    serviceAccountName: ""
    volumes: null
status: {}
