resource/kompose-dev/cadvisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: cadvisor
  name: cadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cadvisor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: cadvisor
    spec:
      containers:
      - image: google/cadvisor
        imagePullPolicy: ""
        name: cadvisor
        resources: {}
        volumeMounts:
        - mountPath: /rootfs
          name: cadvisor-claim0
          readOnly: true
        - mountPath: /dev/disk
          name: cadvisor-claim1
          readOnly: true
        - mountPath: /sys
          name: cadvisor-claim2
          readOnly: true
        - mountPath: /var/lib/docker
          name: cadvisor-claim3
          readOnly: true
        - mountPath: /var/run
          name: cadvisor-claim4
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: cadvisor-claim0
        persistentVolumeClaim:
          claimName: cadvisor-claim0
          readOnly: true
      - name: cadvisor-claim1
        persistentVolumeClaim:
          claimName: cadvisor-claim1
          readOnly: true
      - name: cadvisor-claim2
        persistentVolumeClaim:
          claimName: cadvisor-claim2
          readOnly: true
      - name: cadvisor-claim3
        persistentVolumeClaim:
          claimName: cadvisor-claim3
          readOnly: true
      - name: cadvisor-claim4
        persistentVolumeClaim:
          claimName: cadvisor-claim4
status: {}
