resource/kompose-dev/gui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gui
  name: gui
  namespace: hobbit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gui
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/hobbit: "true"
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: gui
    spec:
      containers:
      - env:
        - name: CHECK_REALM_URL
          value: "false"
        - name: ELASTICSEARCH_HOST
          value: elasticsearch
        - name: ELASTICSEARCH_HTTP_PORT
          value: "9200"
        - name: HOBBIT_RABBIT_HOST
          value: rabbit
        - name: KEYCLOAK_AUTH_URL
          value: http://localhost:8181/auth
        - name: KEYCLOAK_DIRECT_URL
          value: http://keycloak:8080/auth
        image: hobbitproject/hobbit-gui:dev
        imagePullPolicy: IfNotPresent
        name: gui
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
