resource/kompose-dev/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: prometheus
    spec:
      containers:
      - args:
        - --config.file=/config/prometheus.conf
        image: prom/prometheus
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: prometheus-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: prometheus-claim0
        persistentVolumeClaim:
          claimName: prometheus-claim0
          readOnly: true
status: {}
