resource/kompose-dev/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-dev.yml convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
    io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
    annotations:
        kompose.cmd: kompose -f docker-compose-dev.yml convert --volumes hostPath
        kompose.version: 1.21.0 ()
    creationTimestamp: null
    labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: redis
    spec:
    containers:
    - args:
        - redis-server
        - /data/redis.conf
        image: redis:4.0.7
        imagePullPolicy: ""
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
        volumeMounts:
        - mountPath: /data
        name: redis-hostpath0
    restartPolicy: Always
    serviceAccountName: ""
    volumes:
    - hostPath:
        path: /Users/hasi/Documents/Masters/PG/platform/resource/kompose-dev/config/redis-db
        name: redis-hostpath0
status: {}
