resource/kompose-dev/storage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: storage-service
  name: storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: storage-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: storage-service
    spec:
      containers:
      - env:
        - name: HOBBIT_RABBIT_HOST
          value: rabbit
        - name: SPARQL_ENDPOINT_PASSWORD
          value: Password
        - name: SPARQL_ENDPOINT_URL
          value: http://vos:8890/sparql
        - name: SPARQL_ENDPOINT_USERNAME
          value: HobbitPlatform
        image: hobbitproject/hobbit-storage-service:dev
        imagePullPolicy: IfNotPresent
        name: storage-service
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
