resource/kompose-dev/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: rabbit
status:
  loadBalancer: {}
